# cern-root

./: .clang-format  README.md  compile_flags.txt  compile_flags_arch.txt  compile_flags_ubuntu.txt  plot_settings.C
build-arch/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  compile_flags_arch.txt
build-arch/.cache/clangd/index/: CMakeCXXCompilerId.cpp.56688FCC7FA9D94D.idx
build-ubuntu/: CMakeLists.txt  Makefile  cmake_install.cmake  compile_flags_ubuntu.txt
build-ubuntu/.cache/clangd/index/: CMakeCXXCompilerId.cpp.FEEF1A897E80D1A4.idx
tutorials/BKM/: exerciseCanvas1.root  exerciseCanvas2.root  exerciseErrors.cpp  exercises_BKM.cpp
tutorials/data/: data.root
tutorials/generic/: greyscale.cpp  hello.cpp  hist000_TH1_first.cpp  histograms.cpp  legends.cpp  load_datafile.cpp  plot.cpp  reading_plot_file.cpp  regression.cpp  writing_plot_file.cpp
tutorials/rdataframe/: df000_simple.cpp  df001_introduction.cpp  df001_introduction.root  df001_introduction_cpp.d  df001_introduction_cpp_ACLiC_dict_rdict.pcm
tutorials/tgraph/: tgraph_array.cpp  tgraph_datafile.cpp  tgraph_datafile1.cpp  tgraph_datafile2.cpp  tgraph_datafile3.cpp  tgraph_datafile4.cpp  tgraph_datafile5.cpp  tgraph_points.cpp  tgraph_vector.cpp
tutorials/trees/: example1.root  example2.root  example3.root  example4.root  example5.root  particle_CLASS.h  particle_CLASS_h.d  particle_CLASS_h_ACLiC_dict_rdict.pcm  trees.cpp  trees_cpp.d  trees_cpp_ACLiC_dict.cxx_tmp_2298190  trees_cpp_ACLiC_dict_rdict.pcm
